# cloudruption

./: .gitpod.yml  CMakeLists.txt  Config.h  Field.cpp  Field.h  KeyMessage.h  LICENSE  README.md  config.json  consumer.cpp  main.cpp  nctools.cpp  nctools.h  producer.cpp
ProducerConsumer/: CMakeLists.txt  Config.h  DistributedField.cpp  DistributedField.h  Dockerfile  Field.cpp  Field.h  FieldProp.cpp  Grid.cpp  Grid.h  KafkaProducer.cpp  KafkaProducer.h  KeyMessage.h  SinglePatch.h  config.json  consumer.cpp  consumer.py  datadesc.h  docker.run  field.cpp  field.h  fieldop.cpp  nctools.cpp  nctools.h  producer.cpp  setup.py  testfieldop.cpp
ProducerConsumer/Fortran/: CMakeLists.txt
ProducerConsumer/aws/: HowTo.md  entrypoint.py  entrypoint.sh
ProducerConsumer/cmake/: FindRdkafka.cmake
ProducerConsumer/consumer/: container_manifest.yaml  launch.sh
ProducerConsumer/interface/: bind_data.f90  bindproducer.cpp  bindproducer.f90
ProducerConsumer/producerws/: Dockerfile  README.md  container_manifest.yaml  data.py  trigger_producer.py
ProducerConsumer/producerws/swagger/: producer-api.yaml
ProducerConsumer/python/: producer_dash.py
ProducerConsumer/test/: testBindings.f90  testfieldop.cpp
aws/: HowTo.md
aws/io_dash/: Dockerfile  deploy_container.py
aws/io_dash/ebs/: Dockerrun.aws.json
aws/producer_dash/: Dockerfile  Dockerrun.aws.json  deploy_container.py  entrypoint.py
aws/producer_dash/ebs/: Dockerrun.aws.json
aws/visualizer_dash/: .Dockerfile.swp  Dockerfile  deploy_container.py
aws/visualizer_dash/ebs/: Dockerrun.aws.json
cmake/: FindRdkafka.cmake
mpiproject/: Dockerfile  launch_vm.sh  mpi_c.cpp  run_producer.py  setup_mpi_cluster.sh
python/: compare.py  conditional_domain_subset.py  conditional_domain_subset.yaml  crop.py  crop.yaml  data.py  dataregistry.py  dataregistryfile.py  datarequest.py  destaggering.py  destaggering.yaml  domain_intervals.py  grid_operator.py  kalman_corrected_field.py  kalman_corrected_field.yaml  parseGrib.py  testFieldOp.py  toNetCDF.py  toNetCDF.yaml  toNetCDF_dash.py  topicsToDash.py  values.py  vertprofile.py  visualizeData.py  visualizeData.yaml
python/assets/: styles.css
python/test/: testFieldOp.py  testParseGrib.py  test_domain_intervals.py
regression_tests/: tests.sh
resources/: dictionary_cosmo.txt  dictionary_default.txt  dictionary_gme.txt  dictionary_icon.txt  dictionary_ifs.txt  dictionary_observation.txt
scripts/: cleanup_topics.sh  kafka_init.sh  lenses.sh
skinny-wms/: container_manifest.yaml  container_vm.jinja.schema  container_vm.yaml  launch.sh
